--- a/.github/workflows/package_publish.yml
+++ b/.github/workflows/package_publish.yml
@@ -7,12 +7,16 @@ on:
 jobs:
     publish-github-registry:
         runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            packages: write
         steps:
             - uses: actions/checkout@v2
-            - uses: actions/setup-node@v1
+            - uses: actions/setup-node@v2
               with:
                   node-version: 12
                   registry-url: https://npm.pkg.github.com/
+                  scope: "@octocat"
             - run: npm install
             - run: npm run build
             - run: npm run test
