--- a/.github/workflows/package_publish.yml
+++ b/.github/workflows/package_publish.yml
@@ -16,7 +16,8 @@ jobs:
               with:
                   node-version: 12
                   registry-url: https://npm.pkg.github.com/
-                  scope: "@UigeoMun"
+                  scope: "@uigeomun"
+                  always-auth: true
             - run: npm install
             - run: npm run build
             - run: npm run test
