--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@UigeoMun/publish-test",
-    "version": "1.0.1",
+    "name": "@uigeomun/publish-test",
+    "version": "1.0.2",
     "description": "Github Packages Publish Test",
     "main": "dist/index.js",
     "repository": "git@github.com:UigeoMun/publish-test.git",
