--- a/.github/workflows/package_publish.yml
+++ b/.github/workflows/package_publish.yml
@@ -17,7 +17,7 @@ jobs:
                   node-version: 12
                   registry-url: https://npm.pkg.github.com/
                   scope: "@uigeomun"
-                  always-auth: true
+                  # always-auth: true
             - run: npm install
             - run: npm run build
             - run: npm run test
