--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "@uigeomun/publish-test",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "description": "Github Packages Publish Test",
     "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "repository": "git@github.com:UigeoMun/publish-test.git",
     "author": "UigeoMun <ugmun@deepbio.co.kr>",
     "license": "MIT",
@@ -20,5 +21,9 @@
         "build": "tsc",
         "test": "jest",
         "test:watch": "jest --watch"
+    },
+    "dependencies": {
+        "lodash": "^4.17.21",
+        "react": "^17.0.2"
     }
 }
